@@ -8,7 +8,10 @@ GREP="grep"
 ROOT="/"
 MVN="mvn"
 
-MAVEN_OPTS="$MAVEN_OPTS -Xmx1G"
+MAVEN_OPTS="$MAVEN_OPTS -Xmx800m -XX:+HeapDumpOnOutOfMemoryError"
+if $JAVA_HOME/bin/java -fullversion 2>&1 | grep -q 'java full version "9' ; then
+  MAVEN_OPTS="$MAVEN_OPTS --add-modules java.xml.bind"
+fi
 export MAVEN_OPTS
 
 #  Use the maximum available, or set MAX_FD != -1 to use that
